@@ -50,8 +50,11 @@ ladminallowip: all
 // This prevents usage of >& log.file
 console: off
 
-// Are login's case sensitive?
-case_sensitive: on
+// Are login's case sensitive (SQL only)?
+// WARNING: Note that turning this on will cause login queries to use BINARY
+// searches, which disable the table's index and cause severe performance 
+// penalties on large tables.
+case_sensitive: off
 
 // Gamemaster password, used with the @gm command to obtain GM commands (level of gm set with level_new_gm parameter).
 // NOTICE: You should also change this one.
